<resources>
    <string name="app_name">店仓APP</string>
    <string name="login">登陆</string>
    <string name="homepage">首页</string>
    <string name="storeName">1001</string>
    <string name="warehouse">闸北店</string>
    <string name="tvMoblie">账号</string>
    <string name="tvPassword">密码</string>
    <string name="tvMobileHint">请输入工号</string>
    <string name="tvPasswordHint">请输入密码</string>
    <string name="tvRecoverPassword">找回密码</string>
    <string name="versionNumber">版本号：V1.0.1</string>
    <string name="logout">退出</string>
    <string name="identity">张默 001</string>
    <string name="rule_pwd">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="temp_tvIconName">前场料位维护</string>
    <string name="edp_login">EDP登陆</string>
    <string name="select_store">选择登陆门店</string>
    <string name="submit">确定</string>
</resources>