<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/header"/>

    <LinearLayout
        android:id="@+id/lvTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvStoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storeName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWarehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warehouse"
            app:layout_constraintTop_toBottomOf="@+id/tvStoreName"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="17sp"
        android:textStyle="bold"
        android:paddingTop="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivApp"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/icon_app"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textStyle="bold|italic"
        android:textSize="28sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"/>

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/tvMoblie"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivApp"
        app:layout_constraintHorizontal_weight="0.4"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="100dp"
        android:gravity="center_vertical"
        android:inputType="phone"
        android:textSize="19sp"
        android:ems="11"
        android:autofillHints="phone"
        android:background="@null"
        android:hint="@string/tvMobileHint"
        app:layout_constraintLeft_toLeftOf="@+id/tvMobile"
        app:layout_constraintTop_toTopOf="@+id/tvMobile"
        app:layout_constraintHorizontal_weight="0.6"/>

    <LinearLayout
        android:id="@+id/lvLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_login"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/tvPasswod"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/tvPassword"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintHorizontal_weight="0.4"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="100dp"
        android:gravity="center_vertical"
        android:textSize="19sp"
        android:background="@null"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:digits="@string/rule_pwd"
        android:hint="@string/tvPasswordHint"
        app:layout_constraintLeft_toLeftOf="@+id/tvPasswod"
        app:layout_constraintTop_toTopOf="@+id/tvPasswod"
        app:layout_constraintHorizontal_weight="0.6"/>

    <LinearLayout
        android:id="@+id/lvLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_login"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:background="@drawable/i_button_shape"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/lvLine1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvVersionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versionNumber"
        android:layout_marginBottom="10dp"
        android:textColor="@color/version_name"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>