<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <ImageButton
        android:id="@+id/ibReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_return"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lvTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/ibReturn"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvStoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storeName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWarehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warehouse"
            app:layout_constraintTop_toBottomOf="@+id/tvStoreName"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="19dp"
        android:layout_marginRight="18dp"
        android:text="@string/logout"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIdentity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:textSize="17sp"
        android:layout_marginTop="17dp"
        android:paddingTop="3dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:text="@string/identity"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>